          as the gateway program is a HTN RTML interface. So now all the HTN
          functionality is in the gateway, and the VOEvent functionality is
          in the alerter. Need to pull RTML forwarding out of the alerter and
          into the gateway (gateway needs a continous connection on 43002 as
          well as its current open/close in 5170).
          
2005-11-24 Alasdair Allan <aa@astro.ex.ac.uk>

        * Updated eSTAR::Mail to have a Cc option. Also updated most of the
          infrastructure to use this option. The entire thing needs refactoring
          at some point soon while I can still remember how it works.
          
2005-11-22 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl: Support code to test server infrastructre
        
        * eSTAR/Config.pm: Added code to support new testing program

2005-11-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/raptor_alert.pl: More debugging
        
        * eSTAR/RAPTOR/Util.pm: Fixed store_event() method to autocreate
          directories from the $id of the message.
          
2005-11-08 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_templates.pl: Added mail message in case of OMP failure

2005-11-01 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/raptor_alert.pl: Fixed bugs and protocol problems so that it now
          talks to TALON Central correctly.

        * bin/raptor_gateway.pl: Fixed bugs.

        * eSTAR/RAPTOR/Handler.pm: Fixed bugs.

        * eSTAR/RAPTOR/Util.pm: Added store_voevent() method so that proper ACK
          messages can be return to TALON on receipt of a VOEvent message. The
          system now has an Astro::VO::VOEvent dependancy.

2005-10-17 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_templates.pl: Script to be run from crontab file so at JAC
          so we don't have any more missed observations. This checks that the
          templates MSBs are valid for the current instrument and have valid